--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.bentyn"
+        applicationId "com.bentyn.traincoll.android"
         minSdkVersion 14
         targetSdkVersion 21
         compileOptions {
@@ -37,4 +37,7 @@ dependencies {
     compile files('libs/jackson-core-asl-1.9.7.jar')
     compile files('libs/jackson-mapper-asl-1.9.7.jar')
     compile files('libs/autobahn-0.5.0.jar')
+    compile 'com.bentyn.traincoll:TrainCollCommons:1.0.0'
+    compile 'com.squareup.dagger:dagger:1.2.+'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.+'
 }
